# uno-server-2

./: .gitignore  CMakeLists.txt  README.md  Sockets_With_Threads.sln  sockets_with_thread
Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters
Game/: Client.cpp  Game.cpp  GamesList.cpp  utils.cpp
Game/headerFiles/: Client.h  Game.h  GamesList.h  utils.h
Server/: Client.cpp  Client.h  EndPoint.cpp  EndPoint.h  Game.cpp  Game.h  GamesList.cpp  GamesList.h  Ouput.cpp  Output.h  Semaphore.cpp  Semaphore.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters  StoppableServer.cpp  ThreadedSocket.cpp
Server/headerFiles/: EndPoint.h  Semaphore.h  ThreadedSocket.h
